# ui-test-20260224

./: pyproject.toml
.github/actions/run-claude-code/: action.yml
.github/prompts/: run_code_generator.md
.github/workflows/: compile_latex.yml  run_code_generator.yml  run_experiment_validator.yml  run_visualization.yml
.research/: research_history.json
config/: config.yaml
config/run/: comparative-1-gemini-gsm8k.yaml  proposed-gemini-gsm8k.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py
